# tattler-community

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.rst  pyproject.toml
package/: MANIFEST.in  README.rst  pyproject.toml
package/src/tattler/client/tattler_py/: __init__.py  replay_dead_letters.py  serialization.py  tattler_client.py  tattler_client_http.py  tattler_client_utils.py  tattler_cmd.py
package/src/tattler/client/tattler_py/tests/: test_tattler.py  test_tattler_client_utils.py  test_tattler_cmd.py  test_tattler_http.py  test_tattler_module.py
package/src/tattler/docs/: requirements_docs.txt
package/src/tattler/docs/source/: conf.py  configuration.rst  developers.rst  enterprise.rst  index.rst  keyconcepts.rst  plugins.rst  productmanagers.rst  quickstart.rst  roles.rst  spelling_wordlist.txt  sysadmins.rst  templatedesigners.rst
package/src/tattler/docs/source/developers/: api_http.rst  api_python_high.rst  api_python_low.rst  index.rst  scopes.rst  trigger.rst
package/src/tattler/docs/source/diagrams/: deployment.mermaid
package/src/tattler/docs/source/keyconcepts/: events.rst  mode.rst  scopes.rst  vectors.rst
package/src/tattler/docs/source/plugins/: addressbook.rst  addressbookplugin_reference.rst  context.rst  contextplugin_reference.rst  types.rst
package/src/tattler/docs/source/sysadmins/: base_config.rst  index.rst
package/src/tattler/docs/source/templatedesigners/: autotext.rst  email.rst  index.rst  multilingualism.rst  sms.rst  structure.rst  telegram.rst  variables.rst  whatsapp.rst
package/src/tattler/proto/: tattler.yaml
package/src/tattler/server/: pluginloader.py  tattler_utils.py  tattlersrv_http.py  templatemgr.py
package/src/tattler/server/plugins/: passthrough_addressbook_tattler_plugin.py
package/src/tattler/server/sendable/: __init__.py  blacklist.py  bulksms.py  template_processor.py  vector_email.py  vector_sendable.py  vector_sms.py
package/src/tattler/server/sendable/tests/: test_bulksms.py  test_module.py  test_sendable.py  test_template_processor.py  test_vector_email.py  test_vector_sms.py  testutils.py
package/src/tattler/server/templates/_base/email/: body_html
package/src/tattler/server/tests/: test_pluginloader.py  test_tattler_utils.py  test_tattlersrv_http.py  test_templatemgr.py  test_templateprocessor_jinja.py  testutils_templates.py
package/src/tattler/server/tests/fixtures/plugin_loading_order/: a_tattler_plugin.py  c_tattler_plugin.py
package/src/tattler/server/tests/fixtures/plugins/: test1_tattler_plugin.py  test2_tattler_plugin.py
package/src/tattler/server/tests/fixtures/plugins_integration/: addbar_tattler_plugin.py  addfoo_tattler_plugin.py
package/src/tattler/templates/demoscope/demoevent/email/: body_plain
(+170 files in other folders)
