include-package-data = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tattler"
version = "2.0.1"
authors = [{name = "Michele Mazzucchi", email = "support@tattler.dev"}]
# have license information implicitly loaded from LICENSE* file
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Communications",
    ]
description = "A client-server notification system for HTML emails, sms and more."
readme = "README.rst"
requires-python = ">= 3.9"
dependencies = [
    "Jinja2 >= 3.1.2",
    "humanize >= 4.7.0",
    "envdir >= 1.0.1",
]

[project.scripts]
tattler_server = "tattler.server.tattlersrv_http:main"
tattler_notify = "tattler.client.tattler_py.tattler_cmd:main"
tattler_livepreview = "tattler.server.tattler_livepreview:main"

[project.urls]
Home = "https://tattler.dev"
Documentation = "https://docs.tattler.dev/"
Repository = "https://github.com/tattler-community/tattler-community"
Issues = "https://github.com/tattler-community/tattler-community/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tattler.templates.demoscope.demoevent" = ["*"]
"tattler.templates.demoscope.demoevent.email" = ["*"]
